@@ -13,12 +13,13 @@
       <FORM name="signupform">
 	<h1>OpenFlights: Settings</h1>
 
-	<div id="miniresultbox"><i>Account settings</i></div>
+	<div id="miniresultbox"><i>My account</i></div>
 	
 	<table>
 	    <tr>
-	      <td>Openflights URL</td>
+	      <td>OpenFlights URL</td>
 	      <td><INPUT type="text" name="myurl" style="border:none" size="40"></td>
+	      <td rowspan=4><span id="eliteicon"></span>
 	    </tr><tr>
 	      <td style="vertical-align: top">Viewed</td>
 	      <td><input type="text" name="count" value="" style="border: none" READONLY></td>
